workspaces/tilings/src-rust/tiling/src/snapshots/tessellation_tiling__transform_value__tests__next.snap
---
source: workspaces/tiling/src/./transform_value_tests.rs
expression: results
---
[
    (
        Rotate,
        Triangle,
        60,
    ),
    (
        Rotate,
        Triangle,
        120,
    ),
    (
        Rotate,
        Triangle,
        180,
    ),
    (
        Rotate,
        Square,
        90,
    ),
    (
        Rotate,
        Square,
        180,
    ),
    (
        Rotate,
        Hexagon,
        60,
    ),
    (
        Rotate,
        Hexagon,
        120,
    ),
    (
        Rotate,
        Hexagon,
        180,
    ),
    (
        Rotate,
        Octagon,
        45,
    ),
    (
        Rotate,
        Octagon,
        90,
    ),
    (
        Rotate,
        Octagon,
        135,
    ),
    (
        Rotate,
        Octagon,
        180,
    ),
    (
        Rotate,
        Dodecagon,
        30,
    ),
    (
        Rotate,
        Dodecagon,
        60,
    ),
    (
        Rotate,
        Dodecagon,
        90,
    ),
    (
        Rotate,
        Dodecagon,
        120,
    ),
    (
        Rotate,
        Dodecagon,
        150,
    ),
    (
        Rotate,
        Dodecagon,
        180,
    ),
    (
        Reflect,
        Triangle,
        30,
    ),
    (
        Reflect,
        Triangle,
        60,
    ),
    (
        Reflect,
        Triangle,
        90,
    ),
    (
        Reflect,
        Triangle,
        120,
    ),
    (
        Reflect,
        Triangle,
        150,
    ),
    (
        Reflect,
        Triangle,
        180,
    ),
    (
        Reflect,
        Square,
        45,
    ),
    (
        Reflect,
        Square,
        90,
    ),
    (
        Reflect,
        Square,
        135,
    ),
    (
        Reflect,
        Square,
        180,
    ),
    (
        Reflect,
        Hexagon,
        30,
    ),
    (
        Reflect,
        Hexagon,
        60,
    ),
    (
        Reflect,
        Hexagon,
        90,
    ),
    (
        Reflect,
        Hexagon,
        120,
    ),
    (
        Reflect,
        Hexagon,
        150,
    ),
    (
        Reflect,
        Hexagon,
        180,
    ),
    (
        Reflect,
        Octagon,
        45,
    ),
    (
        Reflect,
        Octagon,
        90,
    ),
    (
        Reflect,
        Octagon,
        135,
    ),
    (
        Reflect,
        Octagon,
        180,
    ),
    (
        Reflect,
        Dodecagon,
        15,
    ),
    (
        Reflect,
        Dodecagon,
        30,
    ),
    (
        Reflect,
        Dodecagon,
        45,
    ),
    (
        Reflect,
        Dodecagon,
        60,
    ),
    (
        Reflect,
        Dodecagon,
        75,
    ),
    (
        Reflect,
        Dodecagon,
        90,
    ),
    (
        Reflect,
        Dodecagon,
        105,
    ),
    (
        Reflect,
        Dodecagon,
        120,
    ),
    (
        Reflect,
        Dodecagon,
        135,
    ),
    (
        Reflect,
        Dodecagon,
        150,
    ),
    (
        Reflect,
        Dodecagon,
        165,
    ),
    (
        Reflect,
        Dodecagon,
        180,
    ),
]
