workspaces/tilings/src-rust/tiling/src/snapshots/tessellation_tiling__transform_value__tests__parsing_possible_values.snap
---
source: workspaces/tiling/src/./transform_value_tests.rs
expression: results
---
[
    (
        Rotate,
        Triangle,
        60,
        None,
    ),
    (
        Rotate,
        Triangle,
        120,
        None,
    ),
    (
        Rotate,
        Triangle,
        180,
        None,
    ),
    (
        Rotate,
        Square,
        90,
        None,
    ),
    (
        Rotate,
        Square,
        180,
        None,
    ),
    (
        Rotate,
        Hexagon,
        60,
        None,
    ),
    (
        Rotate,
        Hexagon,
        120,
        None,
    ),
    (
        Rotate,
        Hexagon,
        180,
        None,
    ),
    (
        Rotate,
        Octagon,
        45,
        None,
    ),
    (
        Rotate,
        Octagon,
        90,
        None,
    ),
    (
        Rotate,
        Octagon,
        135,
        None,
    ),
    (
        Rotate,
        Octagon,
        180,
        None,
    ),
    (
        Rotate,
        Dodecagon,
        30,
        None,
    ),
    (
        Rotate,
        Dodecagon,
        60,
        None,
    ),
    (
        Rotate,
        Dodecagon,
        90,
        None,
    ),
    (
        Rotate,
        Dodecagon,
        120,
        None,
    ),
    (
        Rotate,
        Dodecagon,
        150,
        None,
    ),
    (
        Rotate,
        Dodecagon,
        180,
        None,
    ),
    (
        Reflect,
        Triangle,
        30,
        None,
    ),
    (
        Reflect,
        Triangle,
        60,
        None,
    ),
    (
        Reflect,
        Triangle,
        90,
        None,
    ),
    (
        Reflect,
        Triangle,
        120,
        None,
    ),
    (
        Reflect,
        Triangle,
        150,
        None,
    ),
    (
        Reflect,
        Triangle,
        180,
        None,
    ),
    (
        Reflect,
        Square,
        45,
        None,
    ),
    (
        Reflect,
        Square,
        90,
        None,
    ),
    (
        Reflect,
        Square,
        135,
        None,
    ),
    (
        Reflect,
        Square,
        180,
        None,
    ),
    (
        Reflect,
        Hexagon,
        30,
        None,
    ),
    (
        Reflect,
        Hexagon,
        60,
        None,
    ),
    (
        Reflect,
        Hexagon,
        90,
        None,
    ),
    (
        Reflect,
        Hexagon,
        120,
        None,
    ),
    (
        Reflect,
        Hexagon,
        150,
        None,
    ),
    (
        Reflect,
        Hexagon,
        180,
        None,
    ),
    (
        Reflect,
        Octagon,
        45,
        None,
    ),
    (
        Reflect,
        Octagon,
        90,
        None,
    ),
    (
        Reflect,
        Octagon,
        135,
        None,
    ),
    (
        Reflect,
        Octagon,
        180,
        None,
    ),
    (
        Reflect,
        Dodecagon,
        15,
        None,
    ),
    (
        Reflect,
        Dodecagon,
        30,
        None,
    ),
    (
        Reflect,
        Dodecagon,
        45,
        None,
    ),
    (
        Reflect,
        Dodecagon,
        60,
        None,
    ),
    (
        Reflect,
        Dodecagon,
        75,
        None,
    ),
    (
        Reflect,
        Dodecagon,
        90,
        None,
    ),
    (
        Reflect,
        Dodecagon,
        105,
        None,
    ),
    (
        Reflect,
        Dodecagon,
        120,
        None,
    ),
    (
        Reflect,
        Dodecagon,
        135,
        None,
    ),
    (
        Reflect,
        Dodecagon,
        150,
        None,
    ),
    (
        Reflect,
        Dodecagon,
        165,
        None,
    ),
    (
        Reflect,
        Dodecagon,
        180,
        None,
    ),
]
